--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "modernuiicons-json",
   "description": "Provides json representations of the http://modernuiicons.com/ icon collection",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "scripts": {
     "build": "./scripts/svg2json.sh",
     "prepublishOnly": "npm run build && ./scripts/prepare.sh"
   },
   "devDependencies": {
-    "htmlparser2": "^3.9.1"
+    "htmlparser2": "3.9.1"
   },
   "publishConfig": {
     "access": "public"
